--- a/libs/motor/testing/CMakeLists.txt
+++ b/libs/motor/testing/CMakeLists.txt
@@ -1,7 +1,7 @@
 if (BUILD_EXAMPLES)
   add_subdirectory(example)
 endif ()
-
+add_subdirectory(mocks)
 if (BUILD_TESTING)
   add_subdirectory(tests)
 endif ()
