--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "cmake"]
 	path = cmake
-	url = git@github.com:Skaginn3x/cmake_modules.git
+	url = https://github.com/Skaginn3x/cmake_modules.git
