--- a/.github/workflows/tfc-toolchain.yml
+++ b/.github/workflows/tfc-toolchain.yml
@@ -1,9 +1,14 @@
 name: tfc-toolchain
 on:
+  push:
+    branches: ["main"]
+    paths:
+      - '.github/workflows/tfc-toolchain.yml'
+      - 'containers/tfc-toolchain'
   pull_request:
     paths:
       - '.github/workflows/tfc-toolchain.yml'
-      - 'containers/tfc-toolchain.dockerfile'
+      - 'containers/tfc-toolchain'
   workflow_dispatch:
 
 concurrency:
@@ -23,7 +28,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Log in to the Container registry
         uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
@@ -49,8 +54,8 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
-          context: ./containers
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          context: ./containers/tfc-toolchain
+          push: ${{ github.ref == 'refs/haeds/main' }}
+          tags: ${{ steps.meta.outputs.tags }},latest
           labels: ${{ steps.meta.outputs.labels }}
-          file: ./containers/tfc-toolchain.dockerfile
+          file: ./containers/tfc-toolchain/tfc-toolchain.dockerfile
