--- a/.github/workflows/ubuntu-packaging.yml
+++ b/.github/workflows/ubuntu-packaging.yml
@@ -23,14 +23,14 @@ jobs:
   build:
     name: ubuntu packaging
     runs-on: ubuntu-22.04
-    container: ghcr.io/skaginn3x/skaginn3x/framework/tfc-toolchain:sha-6cd5f4c
+    container: ghcr.io/skaginn3x/skaginn3x/framework/tfc-toolchain:latest
     strategy:
       fail-fast: false
       matrix:
         build_type: [debug, release]
         architecture: [ x86_64, aarch64 ]
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: true
           fetch-depth: 0
