remove unnecessary imports

--- a/exes/mqtt-bridge/tests/CMakeLists.txt
+++ b/exes/mqtt-bridge/tests/CMakeLists.txt
@@ -34,33 +34,32 @@ target_compile_definitions(test_mqtt_bridge
 
 find_package(async_mqtt_iface CONFIG REQUIRED)
 
-find_package(Boost REQUIRED COMPONENTS unit_test_framework)
+# find_package(Boost REQUIRED COMPONENTS unit_test_framework)
 
-add_executable(integration_tests
+add_executable(mqtt_bridge_integration_tests
         ../src/client.cpp
         ../src/spark_plug_interface.cpp
         ../src/signal_names.cpp
         src/integration_tests.cpp
         )
 
-target_include_directories(integration_tests
+target_include_directories(mqtt_bridge_integration_tests
         PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}/../inc
         ${CMAKE_CURRENT_SOURCE_DIR}/inc
         )
 
-target_link_libraries(integration_tests
+target_link_libraries(mqtt_bridge_integration_tests
         PUBLIC
         tfc::base
         tfc::logger
         tfc::stx
         tfc::ipc
-        tfc::operation_mode
         tfc::confman
         Boost::boost
         Boost::log
         Boost::program_options
-        Boost::unit_test_framework
+        # Boost::unit_test_framework
         OpenSSL::SSL OpenSSL::Crypto
         tfc::sparkplug::proto
         async_mqtt_iface::async_mqtt_iface
