--- a/cockpit/package.json
+++ b/cockpit/package.json
@@ -49,7 +49,7 @@
     "start": "react-scripts start",
     "build": "GENERATE_SOURCEMAP=false BUILD_PATH='./build' react-scripts build && cp manifest.json ./build/manifest.json",
     "dev": "GENERATE_SOURCEMAP=false react-scripts build && react-scripts start",
-    "devbuild": "GENERATE_SOURCEMAP=true BUILD_PATH='./build' react-scripts build && cp manifest.json ./build/manifest.json && node ./install/create_link.js",
+    "devbuild": "REACT_APP_INCLUDE_DEBUG=true GENERATE_SOURCEMAP=true BUILD_PATH='./build' react-scripts build && cp manifest.json ./build/manifest.json && node ./install/create_link.js",
     "eject": "react-scripts eject",
     "lint": "./node_modules/.bin/eslint"
   },
