remove version files

--- a/libs/progbase/CMakeLists.txt
+++ b/libs/progbase/CMakeLists.txt
@@ -33,23 +33,23 @@ if (BUILD_TESTING)
   add_subdirectory(tests)
 endif ()
 
-# add_custom_command(
-#   OUTPUT
-#     ${CMAKE_CURRENT_BINARY_DIR}/inc/tfc/version.hpp
-#   ALL
-#   COMMAND
-#     ${CMAKE_COMMAND} -D NAMESPACE=tfc -D OUT_FILE=${CMAKE_CURRENT_BINARY_DIR}/inc/tfc/version.hpp -P ${CMAKE_SOURCE_DIR}/cmake/tfc_version.cmake
-#   WORKING_DIRECTORY
-#     ${CMAKE_SOURCE_DIR}
-# )
+add_custom_command(
+  OUTPUT
+    ${CMAKE_CURRENT_BINARY_DIR}/inc/tfc/version.hpp
+  ALL
+  COMMAND
+    ${CMAKE_COMMAND} -D NAMESPACE=tfc -D OUT_FILE=${CMAKE_CURRENT_BINARY_DIR}/inc/tfc/version.hpp -P ${CMAKE_SOURCE_DIR}/cmake/tfc_version.cmake
+  WORKING_DIRECTORY
+    ${CMAKE_SOURCE_DIR}
+)
 
-# add_custom_target(generate_version_header
-#   ALL
-#   COMMAND
-#     ${CMAKE_COMMAND} -D NAMESPACE=tfc -D OUT_FILE=${CMAKE_CURRENT_BINARY_DIR}/inc/tfc/version.hpp -P ${CMAKE_SOURCE_DIR}/cmake/tfc_version.cmake
-#   WORKING_DIRECTORY
-#     ${CMAKE_SOURCE_DIR}
-# )
-# add_dependencies(base generate_version_header)
+add_custom_target(generate_version_header
+  ALL
+  COMMAND
+    ${CMAKE_COMMAND} -D NAMESPACE=tfc -D OUT_FILE=${CMAKE_CURRENT_BINARY_DIR}/inc/tfc/version.hpp -P ${CMAKE_SOURCE_DIR}/cmake/tfc_version.cmake
+  WORKING_DIRECTORY
+    ${CMAKE_SOURCE_DIR}
+)
+add_dependencies(base generate_version_header)
 include(tfc_install)
 tfc_install_lib(base)
