test is ready and working, code is working, but can't destruct object for unknown reason

--- a/exes/mqtt-bridge/tests/CMakeLists.txt
+++ b/exes/mqtt-bridge/tests/CMakeLists.txt
@@ -1,7 +1,6 @@
 add_executable(test_mqtt_bridge
   ../src/client.cpp
   ../src/spark_plug_interface.cpp
-  ../src/external_to_tfc.cpp
   ../src/signal_names.cpp
   src/test_external_to_tfc.cpp
   src/unit_tests.cpp
@@ -32,5 +31,36 @@ target_compile_definitions(test_mqtt_bridge
   PUBLIC
     ASYNC_MQTT_USE_TLS
 )
+
+find_package(async_mqtt_iface CONFIG REQUIRED)
+
+add_executable(mqtt_bridge_integration_tests
+        ../src/client.cpp
+        ../src/spark_plug_interface.cpp
+        ../src/signal_names.cpp
+        src/integration_tests.cpp
+        )
+
+target_include_directories(mqtt_bridge_integration_tests
+        PUBLIC
+        ${CMAKE_CURRENT_SOURCE_DIR}/../inc
+        ${CMAKE_CURRENT_SOURCE_DIR}/inc
+        )
+
+target_link_libraries(mqtt_bridge_integration_tests
+        PUBLIC
+        tfc::base
+        tfc::logger
+        tfc::stx
+        tfc::ipc
+        tfc::confman
+        Boost::boost
+        Boost::log
+        Boost::program_options
+        # Boost::unit_test_framework
+        OpenSSL::SSL OpenSSL::Crypto
+        tfc::sparkplug::proto
+        async_mqtt_iface::async_mqtt_iface
+        )
 
 include(GNUInstallDirs)
