--- a/examples/coredump/CMakeLists.txt
+++ b/examples/coredump/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(example_throw example_throw.cpp)
+add_executable(example_throw example_throw.cpp segfault.cpp)
 target_link_libraries(example_throw
   PRIVATE
     tfc::base
