rename to example_segfault, and link to docs in readme of coredump

--- a/examples/coredump/CMakeLists.txt
+++ b/examples/coredump/CMakeLists.txt
@@ -1,8 +1,8 @@
-add_executable(example_throw example_throw.cpp segfault.cpp)
-target_link_libraries(example_throw
+add_executable(example_segfault example_segfault.cpp segfault.cpp)
+target_link_libraries(example_segfault
   PRIVATE
     tfc::base
 )
 
 include(tfc_split_debug_info)
-tfc_split_debug_info(example_throw)
+tfc_split_debug_info(example_segfault)
