--- a/exes/ethercat/tests/devices/CMakeLists.txt
+++ b/exes/ethercat/tests/devices/CMakeLists.txt
@@ -24,26 +24,9 @@ target_link_libraries(test_atv320_dbus_iface
   Boost::coroutine
 )
 
-find_package(PkgConfig REQUIRED)
-pkg_check_modules(SDBUSPLUS REQUIRED IMPORTED_TARGET GLOBAL sdbusplus)
-find_package(Boost REQUIRED COMPONENTS program_options coroutine)
-add_executable(test_atv320_dbus_iface_integration atv320-dbus-iface-integration.cpp)
-target_link_libraries(test_atv320_dbus_iface_integration
-  tfc::base
-  tfc::ec
-  tfc::mock_ipc
-  tfc::stub_confman
-  tfc::testing
-  PkgConfig::SDBUSPLUS
-  Boost::program_options
-  Boost::coroutine
-)
-
 # Get access to private headers
 target_include_directories(test_atv320_dbus_iface PRIVATE ${tfc_ec_dirs})
 
-target_include_directories(test_atv320_dbus_iface_integration PRIVATE ${tfc_ec_dirs})
-
 add_test(
   NAME
     test_atv320_dbus_iface
@@ -51,10 +34,30 @@ add_test(
     test_atv320_dbus_iface
 )
 
-add_test(
-  NAME
-    test_atv320_dbus_iface_integration
-  COMMAND
-     test_atv320_dbus_iface_integration
-)
+if(NOT (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND CMAKE_BUILD_TYPE STREQUAL "Release"))
+  find_package(PkgConfig REQUIRED)
+  pkg_check_modules(SDBUSPLUS REQUIRED IMPORTED_TARGET GLOBAL sdbusplus)
+  find_package(Boost REQUIRED COMPONENTS program_options coroutine)
 
+  add_executable(test_atv320_dbus_iface_integration atv320-dbus-iface-integration.cpp)
+  target_link_libraries(test_atv320_dbus_iface_integration
+    tfc::base
+    tfc::ec
+    tfc::mock_ipc
+    tfc::stub_confman
+    tfc::testing
+    PkgConfig::SDBUSPLUS
+    Boost::program_options
+    Boost::coroutine
+  )
+
+  target_include_directories(test_atv320_dbus_iface_integration PRIVATE ${tfc_ec_dirs})
+
+  add_test(
+    NAME
+      test_atv320_dbus_iface_integration
+    COMMAND
+       test_atv320_dbus_iface_integration
+  )
+
+endif ()
