--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -30,9 +30,9 @@ jobs:
 
     steps:
       - name: Set Swap Space
-        uses: pierotofy/set-swap-space@master
+        uses: actionhippie/swap-space@v1
         with:
-          swap-size-gb: 32
+          size: 32G
       - uses: actions/checkout@v4
         with:
           submodules: true
