--- a/.github/workflows/ubuntu-packaging.yml
+++ b/.github/workflows/ubuntu-packaging.yml
@@ -23,7 +23,9 @@ jobs:
   build:
     name: ubuntu packaging
     runs-on: ubuntu-22.04
-    container: ghcr.io/skaginn3x/skaginn3x/framework/tfc-toolchain:latest
+    container:
+      image: ghcr.io/skaginn3x/skaginn3x/framework/tfc-toolchain:latest
+      options: --memory="16g" --memory-swap="16g"
     strategy:
       fail-fast: false
       matrix:
