Added basic mock implementation for operation_mode

--- a/libs/operation_mode/testing/mocks/CMakeLists.txt
+++ b/libs/operation_mode/testing/mocks/CMakeLists.txt
@@ -12,7 +12,8 @@ target_include_directories(mock_operation
 
 find_package(GTest CONFIG REQUIRED COMPONENTS gmock)
 target_link_libraries(mock_operation
-  INTERFACE
+  PUBLIC
+    Boost::boost
     tfc::operation_mode
     GTest::gmock
 )
