--- a/libs/operation_mode/testing/tests/CMakeLists.txt
+++ b/libs/operation_mode/testing/tests/CMakeLists.txt
@@ -2,7 +2,7 @@ find_package(ut CONFIG REQUIRED)
 
 add_executable(mock_operation_test mock_operation_test.cpp)
 
-target_link_libraries(mock_operation_test PRIVATE Boost::ut tfc::base tfc::mock_operation)
+target_link_libraries(mock_operation_test PRIVATE Boost::ut Boost::boost tfc::base tfc::mock_operation)
 
 add_test(
   NAME
