Update systemd options to allow shared runtime_dir

--- a/exes/ethercat/systemd/ethercat.service
+++ b/exes/ethercat/systemd/ethercat.service
@@ -14,8 +14,10 @@ AmbientCapabilities=CAP_NET_RAW CAP_NET_ADMIN
 Restart=always
 RestartSec=1s
 RuntimeDirectory=tfc
+RuntimeDirectoryPreserve=yes
 ConfigurationDirectory=tfc
 PrivateTmp=true
+ProtectSystem=yes # Cannot be set to full or strict, requires acess to /etc/tfc to facilitate configuration changes
 
 [Install]
 WantedBy=multi-user.target
