Fix confman mocks to install

--- a/libs/confman/testing/CMakeLists.txt
+++ b/libs/confman/testing/CMakeLists.txt
@@ -3,4 +3,6 @@ if(BUILD_EXAMPLES)
 endif()
 add_subdirectory(mocks)
 add_subdirectory(stubs)
-add_subdirectory(tests)
+if(BUILD_TESTS)
+  add_subdirectory(tests)
+endif()
