--- a/libs/confman/testing/CMakeLists.txt
+++ b/libs/confman/testing/CMakeLists.txt
@@ -3,6 +3,6 @@ if(BUILD_EXAMPLES)
 endif()
 add_subdirectory(mocks)
 add_subdirectory(stubs)
-if(BUILD_TESTS)
+if(BUILD_TESTING)
   add_subdirectory(tests)
 endif()
