integration test mqtt (#428)
Add integration tests, combine config files for MQTT.

--- a/exes/mqtt-bridge/tests/CMakeLists.txt
+++ b/exes/mqtt-bridge/tests/CMakeLists.txt
@@ -1,7 +1,6 @@
+find_package(async_mqtt_iface CONFIG REQUIRED)
+
 add_executable(test_mqtt_bridge
-  ../src/client.cpp
-  ../src/spark_plug_interface.cpp
-  ../src/external_to_tfc.cpp
   ../src/signal_names.cpp
   src/test_external_to_tfc.cpp
   src/unit_tests.cpp
@@ -15,22 +14,47 @@ target_include_directories(test_mqtt_bridge
 
 target_link_libraries(test_mqtt_bridge
   PUBLIC
-    tfc::base
-    tfc::logger
-    tfc::stx
     tfc::ipc
-    tfc::operation_mode
-    tfc::confman
     Boost::boost
-    Boost::log
-    Boost::program_options
-    OpenSSL::SSL OpenSSL::Crypto
     tfc::sparkplug::proto
+    async_mqtt_iface::async_mqtt_iface
 )
 
 target_compile_definitions(test_mqtt_bridge
   PUBLIC
     ASYNC_MQTT_USE_TLS
+)
+
+add_test(
+  NAME
+    test_mqtt_bridge
+  COMMAND
+    test_mqtt_bridge
+)
+
+add_executable(mqtt_bridge_integration_tests
+  ../src/signal_names.cpp
+  src/integration_tests.cpp
+)
+
+target_include_directories(mqtt_bridge_integration_tests
+  PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}/../inc
+    ${CMAKE_CURRENT_SOURCE_DIR}/inc
+)
+
+target_link_libraries(mqtt_bridge_integration_tests
+  PUBLIC
+    tfc::ipc
+    tfc::sparkplug::proto
+    async_mqtt_iface::async_mqtt_iface
+)
+
+add_test(
+  NAME
+    mqtt_bridge_integration_tests
+  COMMAND
+    mqtt_bridge_integration_tests
 )
 
 include(GNUInstallDirs)
